tests/ui/autodiff/autodiff_illegal.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/autodiff_illegal.rs:61:5
   |
LL |     #[autodiff(df7, Forward, Dual)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: Duplicated can not be used for this type
  --> $DIR/autodiff_illegal.rs:14:14
   |
LL | pub fn f1(x: f64) {
   |              ^^^

error: expected 1 activities, but found 2
  --> $DIR/autodiff_illegal.rs:20:1
   |
LL | #[autodiff(df3, Reverse, Duplicated, Const)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 1 activities, but found 0
  --> $DIR/autodiff_illegal.rs:27:1
   |
LL | #[autodiff(df4, Reverse)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 3 activities, but found 2
  --> $DIR/autodiff_illegal.rs:34:1
   |
LL | #[autodiff(df5, Forward, Dual, Dual)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Dual can not be used in Reverse Mode
  --> $DIR/autodiff_illegal.rs:42:1
   |
LL | #[autodiff(df6, Reverse, Dual)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Duplicated can not be used in Forward Mode
  --> $DIR/autodiff_illegal.rs:49:1
   |
LL | #[autodiff(df7, Forward, Duplicated)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Duplicated can not be used for this type
  --> $DIR/autodiff_illegal.rs:50:14
   |
LL | pub fn f7(x: f64) {
   |              ^^^

error: autodiff must be applied to function
  --> $DIR/autodiff_illegal.rs:58:5
   |
LL |     let mut x = 5;
   |     ^^^^^^^^^^^^^^

error: autodiff must be applied to function
  --> $DIR/autodiff_illegal.rs:62:5
   |
LL |     x = x + 3;
   |     ^

error: autodiff must be applied to function
  --> $DIR/autodiff_illegal.rs:67:5
   |
LL |     let add_one_v2 = |x: u32| -> u32 { x + 1 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: autodiff requires at least a name and mode
  --> $DIR/autodiff_illegal.rs:73:1
   |
LL | / pub fn f8(x: f64) {
LL | |
LL | |     unimplemented!()
LL | | }
   | |_^

error: autodiff requires at least a name and mode
  --> $DIR/autodiff_illegal.rs:80:1
   |
LL | / pub fn f9(x: f64) {
LL | |
LL | |     unimplemented!()
LL | | }
   | |_^

error: autodiff requires at least a name and mode
  --> $DIR/autodiff_illegal.rs:87:1
   |
LL | / pub fn f10(x: f64) {
LL | |
LL | |     unimplemented!()
LL | | }
   | |_^

error[E0428]: the name `fn_exists` is defined multiple times
  --> $DIR/autodiff_illegal.rs:95:1
   |
LL | fn fn_exists() {}
   | -------------- previous definition of the value `fn_exists` here
...
LL | #[autodiff(fn_exists, Reverse, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `fn_exists` redefined here
   |
   = note: `fn_exists` must be defined only once in the value namespace of this module

error: autodiff requires at least a name and mode
  --> $DIR/autodiff_illegal.rs:103:1
   |
LL | / pub fn f12() {
LL | |
LL | |     unimplemented!()
LL | | }
   | |_^

error: unknown Mode: `Debug`. Use `Forward` or `Reverse`
  --> $DIR/autodiff_illegal.rs:109:18
   |
LL | #[autodiff(df13, Debug)]
   |                  ^^^^^

error: did not recognize Activity: `Reverse`
  --> $DIR/autodiff_illegal.rs:117:27
   |
LL | #[autodiff(df14, Forward, Reverse)]
   |                           ^^^^^^^

error: invalid return activity Active in Forward Mode
  --> $DIR/autodiff_illegal.rs:169:1
   |
LL | #[autodiff(df20, Forward, Dual, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid return activity Dual in Reverse Mode
  --> $DIR/autodiff_illegal.rs:175:1
   |
LL | #[autodiff(df21, Reverse, Active, Dual)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid return activity Duplicated in Reverse Mode
  --> $DIR/autodiff_illegal.rs:182:1
   |
LL | #[autodiff(df22, Reverse, Active, Duplicated)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `MyFloat`
  --> $DIR/autodiff_illegal.rs:138:1
   |
LL | #[autodiff(df16, Reverse, Active, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `MyFloat`

error[E0433]: failed to resolve: use of undeclared type `F64Trans`
  --> $DIR/autodiff_illegal.rs:162:1
   |
LL | #[autodiff(df19, Reverse, Active, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `F64Trans`

error[E0599]: the function or associated item `default` exists for tuple `(DoesNotImplDefault, DoesNotImplDefault)`, but its trait bounds were not satisfied
  --> $DIR/autodiff_illegal.rs:189:1
   |
LL | struct DoesNotImplDefault;
   | ------------------------- doesn't satisfy `DoesNotImplDefault: Default`
LL | #[autodiff(df23, Forward, Dual)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `(DoesNotImplDefault, DoesNotImplDefault)` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `DoesNotImplDefault: Default`
           which is required by `(DoesNotImplDefault, DoesNotImplDefault): Default`
help: consider annotating `DoesNotImplDefault` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | struct DoesNotImplDefault;
   |

error: aborting due to 24 previous errors

Some errors have detailed explanations: E0428, E0433, E0599, E0658.
For more information about an error, try `rustc --explain E0428`.
